--- a/BlogPessoal/BlogPessoal/pom.xml
+++ b/BlogPessoal/BlogPessoal/pom.xml
@@ -41,9 +41,15 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			 <groupId>org.springframework.boot</groupId>
+			 <artifactId>spring-boot-starter-test</artifactId>
+			 <scope>test</scope>
+			 <exclusions>
+			 	<exclusion>
+			 		<groupId>org.junit.vintage</groupId>
+			 		<artifactId>junit-vintage-engine</artifactId>
+			 	</exclusion>
+			 </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,16 +58,20 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+		</build>
 
 </project>
