--- a/BlogPessoal/BlogPessoal/src/main/resources/application.properties
+++ b/BlogPessoal/BlogPessoal/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost/db_blogPessoal?createDatabaseIfNotE
 spring.datasource.username=grupo
 spring.datasource.password=projeto12345
 spring.jpa.show-sql=true
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.use-root-path=true
+springdoc.packagesToScan=com.generation.blogpessoal.BlogPessoal.controller
