--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		</dependency>
 
 
-		<!-- DB enviroment -->
+		<!-- DB environment -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
