--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/db_blogPessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=grupo
 spring.datasource.password=projeto12345
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
